esp8266_uart2wifi_bpw-mkcells-di02

--- a/firmware/esp8266_uart2wifi_bpw-mkcells-di02/index.html
+++ b/firmware/esp8266_uart2wifi_bpw-mkcells-di02/index.html
@@ -30,7 +30,7 @@
                 <input class="w3-input" type="text" id="unit" value="%unit%" disabled>
             </label>
         </p>
-        <button class="w3-btn w3-teal" type="submit" id="confirm" onclick="buttonClicked(this)">Confirm</button>
+        <button class="w3-btn w3-teal" type="submit" id="confirm" onclick="buttonClicked(this)">Print</button>
         <br><br><br><br>
     </div>
 
